sample-boot2-keycloak/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-boot2-keycloak
  labels:
    app: sample-boot2-keycloak
spec:
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: sample-boot2-keycloak
  template:
    metadata:
      labels:
        app: sample-boot2-keycloak
    spec:
      containers:
        - name: sample-boot2-keycloak
          image: dasomel/sample-boot2-keycloak:1.0.0
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 0.5
              memory: 0.5Gi
            limits:
              cpu: 0.5
              memory: 0.5Gi
