sample-boot2-keycloak/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-boot2-keycloak
spec:
  type: NodePort
  selector:
    app: sample-boot2-keycloak
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30103
